# recom-azure-function

./: .env.secret  .gitignore  Makefile  README.md  function_app.py  host.json  local.settings.json  pyproject.toml  requirements.txt
blueprints/: data_processor.py  orchestrator.py  pdf_handler.py  product_scraper.py  series_scraper.py  triggers.py
data/: connect_mssql.py  create_views.py  crosses.csv  crosslist_views.sql  ingest_recom_products.ipynb  init_azure_db.py  init_db.py  insert_crosses.py  load_mssql.py  load_schema.ipynb  load_schema.py  products_data.py
data/crosses_old/: 2024-06-26-dcdc-horizontal.csv  2024-06-26-dcdc-vertical.csv  2024-06-30-acdc_horizontal.csv  2024-06-30-acdc_vertical.csv  2024-07-05-dcdc-horizontal.csv  2024-07-05-dcdc-vertical.csv  Artikel_Crossliste_certification.csv  converters.csv
functions/blob_trigger/: __init__.py
functions/download_pdfs/: __init__.py  function.json
functions/extract_pdf_data/: __init__.py
functions/extract_structured_data/: __init__.py
functions/orchestrator/: __init__.py  function.json
functions/scrape_products/: __init__.py
functions/scrape_series/: __init__.py
functions/start_orchestrator/: __init__.py  function.json
functions/validate_data/: __init__.py
shared/: environment.py  model.py  storage.py
